fix: null-safe EDI generation and multi-encounter support fixes
- Add elem()/comp() null-safe wrappers in EDI837Generator
- Fix seed data with missing patient address, insurance groupNumber,
  and procedure unitType/modifiers/diagnosisPointers
- Simplify ClaimsRequest validation (remove @NotBlank on list elements)
- Fix MongoDB database config for Spring Boot 4.x
- Increase Tomcat max-http-header-size to 128KB

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>